--- a/app/src/main/res/layout/custom_event_calender_fragment.xml
+++ b/app/src/main/res/layout/custom_event_calender_fragment.xml
@@ -39,7 +39,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textview"
+            android:id="@+id/eventTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
