--- a/app/src/main/res/layout/custom_layout_actionbar.xml
+++ b/app/src/main/res/layout/custom_layout_actionbar.xml
@@ -2,39 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:weightSum="1">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/padding_common_2"
-        >
+        android:paddingTop="@dimen/padding_common_2">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/notificationBell"
                 android:layout_width="35dp"
                 android:layout_height="55dp"
-                android:src="@drawable/icon_bell"/>
+                android:src="@drawable/icon_bell" />
 
             <TextView
+                android:id="@+id/badgeCount"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:textColor="@android:color/white"
-                android:text="25"
-                android:gravity="center"
-                android:layout_marginLeft="-10dp"
-                android:background="@drawable/bg_dot"
                 android:layout_alignParentTop="true"
+                android:layout_marginLeft="-10dp"
+                android:layout_toEndOf="@+id/notificationBell"
                 android:layout_toRightOf="@+id/notificationBell"
-                android:layout_toEndOf="@+id/notificationBell" />
+                android:background="@drawable/bg_dot"
+                android:gravity="center"
+                android:text="25"
+                android:textColor="@android:color/white" />
         </RelativeLayout>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/filterImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow_gray"
+        android:visibility="gone"
+        android:paddingTop="@dimen/padding_common_10"
+        android:paddingLeft="@dimen/padding_common_10"
+
+        />
 
 </LinearLayout>
