--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0094DA</color>
-    <color name="colorPrimaryDark">#0094DA</color>
+    <color name="colorPrimary">#00A4E5</color>
+    <color name="colorPrimaryDark">#00A4E5</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorScheduleTab">#B31C8E</color>
     <color name="colorScheduleBottomUnSelect">#72003F</color>
