--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
         <ListView
             android:id="@+id/left_drawer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:cacheColorHint="@android:color/transparent"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
