--- a/app/src/main/res/layout/custom_layout_actionbar.xml
+++ b/app/src/main/res/layout/custom_layout_actionbar.xml
@@ -39,7 +39,7 @@
         android:id="@+id/filterImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_gray"
+        android:src="@drawable/filter_icon"
         android:visibility="gone"
         android:paddingTop="@dimen/padding_common_10"
         android:paddingLeft="@dimen/padding_common_10"
