--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -14,16 +14,23 @@
             android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <LinearLayout
+        <com.ymca.ViewPager.CirclePageIndicator
+            android:id="@+id/sliderIndicator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" >
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:padding="5dip"
+            android:layout_alignParentBottom="true"/>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true" >-->
 
-            <include layout="@layout/footer_view" />
-        </LinearLayout>
+            <!--<include layout="@layout/footer_view" />-->
+        <!--</LinearLayout>-->
     </RelativeLayout>
     <!--<com.ymca.ViewPager.AutoScrollViewPager-->
         <!--android:id="@+id/pager"-->
