--- a/app/src/main/res/layout/instructor_detail_fragment.xml
+++ b/app/src/main/res/layout/instructor_detail_fragment.xml
@@ -22,10 +22,10 @@
         android:id="@+id/circleInstructorLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/instructorDetailHeader"
         android:orientation="horizontal"
         android:paddingTop="@dimen/padding_common_10"
-        android:weightSum="1"
-        android:layout_below="@+id/instructorDetailHeader">
+        android:weightSum="1">
 
         <View
             android:layout_width="0dp"
@@ -76,101 +76,77 @@
         android:textStyle="bold"
         app:fontNames="@string/custom_primary_font" />
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/instructorName">
+        android:layout_below="@+id/instructorName"
+        android:orientation="vertical">
 
-        <LinearLayout
+
+        <com.ymca.CustomFont.PrimaryFontText
+
+            android:id="@+id/expTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@drawable/classes_short_bg"
+            android:drawableLeft="@drawable/instructor_detail_arrow"
+            android:drawablePadding="@dimen/padding_common_5"
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_common_5"
+            android:text="@string/instructor_info"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/margin_common_16"
+            android:textStyle="bold"
+            app:fontNames="@string/custom_primary_font" />
 
+        <LinearLayout
+            android:id="@+id/experienceLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/expTag"
+            android:orientation="vertical"
+            android:visibility="visible">
 
-            <com.ymca.CustomFont.PrimaryFontText
-
-                android:id="@+id/expTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/classes_short_bg"
-                android:drawableLeft="@drawable/instructor_detail_arrow"
-                android:drawablePadding="@dimen/padding_common_5"
-                android:gravity="center_vertical"
-                android:padding="@dimen/padding_common_5"
-                android:text="@string/ecperience"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/margin_common_16"
-                android:textStyle="bold"
-                app:fontNames="@string/custom_primary_font" />
-
-            <LinearLayout
-                android:id="@+id/experienceLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/expTag"
-                android:orientation="vertical">
-
-            </LinearLayout>
-
-            <com.ymca.CustomFont.PrimaryFontText
-
-                android:id="@+id/certificationTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/experienceLayout"
-                android:background="@drawable/classes_short_bg"
-                android:drawableLeft="@drawable/instructor_detail_arrow"
-                android:drawablePadding="@dimen/padding_common_5"
-                android:gravity="center_vertical"
-                android:padding="@dimen/padding_common_5"
-                android:text="@string/certification"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/margin_common_16"
-                android:textStyle="bold"
-                app:fontNames="@string/custom_primary_font" />
-
-
-            <LinearLayout
-                android:id="@+id/certificateLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/certificationTag"
-                android:orientation="horizontal">
-
-
-            </LinearLayout>
-
-            <com.ymca.CustomFont.PrimaryFontText
-
-                android:id="@+id/funFactTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/certificateLayoutScroll"
-                android:background="@drawable/classes_short_bg"
-                android:drawableLeft="@drawable/instructor_detail_arrow"
-                android:drawablePadding="@dimen/padding_common_5"
-                android:gravity="center_vertical"
-                android:padding="@dimen/padding_common_5"
-                android:text="@string/fun"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/margin_common_16"
-                android:textStyle="bold"
-                app:fontNames="@string/custom_primary_font" />
-
-            <LinearLayout
-                android:id="@+id/funFactLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/certificationTag"
-                android:orientation="horizontal">
-
-            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+
+        <com.ymca.CustomFont.PrimaryFontText
+
+            android:id="@+id/certificationTag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/experienceLayout"
+            android:background="@drawable/classes_short_bg"
+            android:drawableLeft="@drawable/instructor_detail_arrow"
+            android:drawablePadding="@dimen/padding_common_5"
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_common_5"
+            android:text="@string/clas_activit"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/margin_common_16"
+            android:textStyle="bold"
+            app:fontNames="@string/custom_primary_font" />
+
+
+        <LinearLayout
+            android:id="@+id/certificateLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/certificationTag"
+            android:orientation="horizontal">
+
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/instructorListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="15dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_img" />
 </RelativeLayout>
