--- a/app/src/main/res/layout/custom_event_calender_fragment.xml
+++ b/app/src/main/res/layout/custom_event_calender_fragment.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.ymca.CustomFont.PrimaryFontText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:padding="@dimen/padding_common_10"
+        android:text="@string/event_caln"
+        android:textAllCaps="true"
+        android:textColor="@color/colorScheduleBottomUnSelect"
+        android:textSize="@dimen/text_size_common_22"
+        android:textStyle="bold"
+        app:fontName="@string/custom_primary_font" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/calendar1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/button_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <Button
-                android:id="@+id/customize_button"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/calendar1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="PREV"/>
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_common_25"
+                android:paddingRight="@dimen/padding_common_25"/>
 
-            <Button
-                android:id="@+id/show_dialog_button"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:id="@+id/button_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="NEXT"/>
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <Button
+                    android:id="@+id/customize_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="PREV" />
+
+                <Button
+                    android:id="@+id/show_dialog_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="NEXT" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/eventTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ListView
+                android:id="@+id/eventListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/eventTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
