--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".48">
+        android:layout_weight=".5">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/frame"
@@ -42,7 +42,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".5"
+        android:layout_weight=".48"
         android:orientation="vertical"
         android:weightSum="1">
 
@@ -101,7 +101,7 @@
                 android:layout_weight=".5"
                 android:background="@drawable/program_icon"
                 android:orientation="vertical"
-                android:weightSum="1"></LinearLayout>
+                android:weightSum="1"/>
 
             <LinearLayout
                 android:id="@+id/classLayout"
