--- a/app/src/main/res/layout/my_card_items.xml
+++ b/app/src/main/res/layout/my_card_items.xml
@@ -21,17 +21,19 @@
         android:layout_weight=".8"
         android:background="@drawable/classes_bg"
         android:orientation="vertical"
-        android:padding="@dimen/padding_common_2"
+        android:padding="@dimen/padding_common_5"
         android:gravity="center_vertical"
-        android:weightSum="1">
+        android:weightSum="1"
+        >
 
         <com.ymca.CustomFont.PrimaryFontText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/user_default"
+            android:drawablePadding="@dimen/padding_common_5"
             android:text="XXXXX"
             android:textAllCaps="true"
-            android:textColor="@color/colorScheduleBottomUnSelect"
+            android:textColor="@color/colorTextPurple"
             android:textStyle="bold"
             android:gravity="center_vertical"
             app:fontName="@string/custom_primary_font"
