--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -7,17 +7,32 @@
     android:weightSum="1">
 
     <!--<include layout="@layout/custom__back_button_actionbar"/>-->
-    <com.ymca.CustomFont.PrimaryFontText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:padding="@dimen/padding_common_10"
-        android:text="@string/announcement"
-        android:textAllCaps="true"
-        android:textColor="@color/colorScheduleBottomUnSelect"
-        android:textSize="@dimen/text_size_common_22"
-        android:textStyle="bold"
-        app:fontName="@string/custom_primary_font" />
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:paddingBottom="@dimen/padding_common_5">
+
+        <com.ymca.CustomFont.PrimaryFontText
+            android:layout_width="0dp"
+            android:layout_weight=".8"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="@dimen/padding_common_10"
+            android:text="@string/announcement"
+            android:textAllCaps="true"
+            android:textColor="@color/colorScheduleBottomUnSelect"
+            android:textSize="@dimen/text_size_common_22"
+            android:textStyle="bold"
+            app:fontName="@string/custom_primary_font" />
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/call_icon"
+            android:layout_weight=".2"
+            android:scaleType="fitCenter"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/notificationList"
