--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorTextGray">#8A8A8C</color>
     <color name="colorTextGreeen">#51B100</color>
     <color name="colorTextRed">#F73204</color>
+    <color name="colorTextPurple">#832990</color>
 </resources>
